# tower-planner

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
PROMPTS/: 001-create-test-fixtures.md  002-implement-terrain-profile.md
domain/: __init__.py
domain/coverage/: __init__.py
domain/siting/: __init__.py
domain/terrain/: __init__.py  errors.py  repositories.py  services.py  value_objects.py
scripts/: gen_fixtures.py
shared/: __init__.py  fixtures_expected.py
spec/: SPEC.md  coverage.md  glossary.md  siting.md  terrain.md
spec/features/: FEAT-001-load-dem.md  FEAT-002-terrain-profile.md
spec/tech-debt/: FEAT-001-tech-debt.md
src/: __init__.py
src/affine/: __init__.py
src/gis/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/terrain/: __init__.py  geotiff_adapter.py
src/rasterio/: __init__.py  enums.py  transform.py  warp.py
tests/: __init__.py  conftest.py  conftest_utils.py  fixtures_expected.py
tests/coverage/: __init__.py
tests/fixtures/: README.md  dem_100x100_4326.tif  dem_85pct_nodata.tif  dem_all_nodata.tif  dem_all_nodata_partial.tif  dem_corrupted.tif  dem_extreme_elevations.tif  dem_known_values_4326.tif  dem_known_values_4326_int16.tif  dem_large.tif  dem_nan_transform.tif  dem_no_crs.tif  dem_polar_extreme.tif  dem_utm23s.tif  dem_with_nodata.tif  rgb_image.tif
tests/gis/: __init__.py  conftest.py  test_fixtures_sanity.py  test_geotiff_adapter.py
tests/siting/: __init__.py
tests/terrain/: __init__.py  conftest.py  test_terrain_profile.py
(+6 files in other folders)
